--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "react": "^18.2.0",
     "react-collapsed": "^3.3.2",
     "react-dom": "^18.2.0",
+    "react-native": "^0.69.1",
+    "react-native-web": "^0.18.6",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
