--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.4.0",
     "react-collapsed": "^3.3.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-native": "^0.69.1",
     "react-native-web": "^0.18.6",
     "react-router-dom": "^6.3.0",
