--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "technical-assesment",
   "version": "0.1.0",
   "private": true,
+  "author": "Gabriel Grobler",
+  "description": "Technical Assesment for intership oppurtunity",
   "dependencies": {
     "@electron/remote": "^2.0.8",
     "@testing-library/jest-dom": "^5.16.4",
@@ -11,7 +13,7 @@
     "bootstrap": "^5.1.3",
     "concurrently": "^7.2.2",
     "cross-env": "^7.0.3",
-    "electron": "^19.0.8",
+    "electron-squirrel-startup": "^1.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-collapsed": "^3.3.2",
@@ -27,16 +29,16 @@
   "main": "public/main.js",
   "homepage": "./",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "electron-forge start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "dev": "concurrently -k \"cross-env BROWSER=none npm start\" \"npm run electron\"",
     "electron": "wait-on tcp:3000 && electron .",
-    "package": "react-scripts build && electron-forge package",
+    "package": "electron-forge package",
     "make-mac": "react-scripts build && electron-forge make --platform darwin",
     "make-linux": "react-scripts build && electron-forge make --platform linux",
-    "make": "react-scripts build && electron-forge make"
+    "make": "electron-forge make"
   },
   "eslintConfig": {
     "extends": [
@@ -55,5 +57,40 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@electron-forge/cli": "^6.0.0-beta.64",
+    "@electron-forge/maker-deb": "^6.0.0-beta.64",
+    "@electron-forge/maker-rpm": "^6.0.0-beta.64",
+    "@electron-forge/maker-squirrel": "^6.0.0-beta.64",
+    "@electron-forge/maker-zip": "^6.0.0-beta.64",
+    "electron": "^19.0.8"
+  },
+  "config": {
+    "forge": {
+      "packagerConfig": {},
+      "makers": [
+        {
+          "name": "@electron-forge/maker-squirrel",
+          "config": {
+            "name": "technical_assesment"
+          }
+        },
+        {
+          "name": "@electron-forge/maker-zip",
+          "platforms": [
+            "darwin"
+          ]
+        },
+        {
+          "name": "@electron-forge/maker-deb",
+          "config": {}
+        },
+        {
+          "name": "@electron-forge/maker-rpm",
+          "config": {}
+        }
+      ]
+    }
   }
 }
