--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "wait-on": "^6.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "electron": "^19.0.8"
   },
   "main": "public/electron.js",
   "homepage": "./",
@@ -58,7 +59,7 @@
     ]
   },
   "devDependencies": {
-    "electron": "^19.0.8",
+    
     "electron-builder": "^23.1.0"
   },
   "build": {
